# autoware_core

./: .clang-tidy-ci  .clang-tidy-ignore  .cspell.json  .gitignore  .pre-commit-config.yaml  THIRD_PARTY_NOTICE  build_depends.repos  mkdocs.yaml  packages_above.repos  versions.json
common/autoware_agnocast_wrapper/: CMakeLists.txt  README.md  package.xml
common/autoware_agnocast_wrapper/cmake/: autoware_agnocast_wrapper_register_node.cmake
common/autoware_agnocast_wrapper/docs/: review_guide.md
common/autoware_agnocast_wrapper/launch/: agnocast_env.launch.py  agnocast_env.launch.xml
common/autoware_agnocast_wrapper/src/: node.cpp
common/autoware_agnocast_wrapper/templates/: node_main_switchable.cpp.in
common/autoware_agnocast_wrapper/test/: test_agnocast_wrapper.cpp  test_polling_subscriber.cpp
common/autoware_component_interface_specs/: CHANGELOG.rst  CMakeLists.txt  README.md  interface_manifest.json  package.xml
common/autoware_component_interface_specs/src/: generate_interface_manifest.cpp  generate_type_hashes.cpp
common/autoware_component_interface_specs/test/: test_concepts.cpp  test_cxx17_compat.cpp  test_localization.cpp  test_manifest.cpp  test_service_qos.cpp  test_system.cpp  test_type_hashes.cpp  test_version.cpp
common/autoware_kalman_filter/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
common/autoware_kalman_filter/src/: kalman_filter.cpp  time_delay_kalman_filter.cpp
common/autoware_kalman_filter/test/: test_kalman_filter.cpp  test_time_delay_kalman_filter.cpp
common/autoware_localization_util/: CMakeLists.txt
common/autoware_localization_util/test/: test_covariance_ellipse.cpp
localization/autoware_gyro_odometer/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
localization/autoware_gyro_odometer/src/: gyro_odometer_core.cpp  gyro_odometer_core.hpp
localization/autoware_gyro_odometer/test/: test_gyro_odometer_helper.cpp  test_gyro_odometer_pubsub.cpp
localization/autoware_localization_fusion_host/: CMakeLists.txt  README.md  package.xml  plugins.xml
localization/autoware_localization_fusion_host/config/: localization_fusion_host.param.yaml
localization/autoware_localization_fusion_host/launch/: localization_fusion_host.launch.xml
localization/autoware_localization_fusion_host/src/: ekf_fusion_core.cpp  localization_fusion_host.cpp  stop_filter_plugin.cpp  twist2accel_plugin.cpp
localization/autoware_localization_fusion_host/src/include/: ekf_fusion_core.hpp  fusion_data.hpp  (+4 more)
localization/autoware_unified_localization/: CMakeLists.txt  README.md  package.xml
localization/autoware_unified_localization/config/: gnss_only_test.param.yaml  unified_localization.param.yaml  unified_localization_yabloc.param.yaml
localization/autoware_unified_localization/launch/: unified_localization.launch.py
localization/autoware_unified_localization/src/: localization_node.cpp
localization/autoware_unified_localization/test/: test_fusion_pipeline.cpp  test_gnss_only_auto_launch.py  test_unified_localization_launch.py
perception/autoware_euclidean_cluster_object_detector/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_euclidean_cluster_object_detector/launch/: voxel_grid_based_euclidean_cluster.launch.py
perception/autoware_euclidean_cluster_object_detector/lib/: euclidean_cluster.cpp  ros_conversions.cpp  ros_conversions.hpp  utils.cpp  voxel_grid_based_euclidean_cluster.cpp
perception/autoware_euclidean_cluster_object_detector/src/: euclidean_cluster.hpp  euclidean_cluster_node.cpp  euclidean_cluster_node.hpp  euclidean_cluster_object_detector.cpp  euclidean_cluster_object_detector.hpp  euclidean_cluster_object_detector_node.cpp  euclidean_cluster_object_detector_node.hpp  parameters.hpp  voxel_grid_based_euclidean_cluster.hpp  voxel_grid_based_euclidean_cluster_node.cpp  voxel_grid_based_euclidean_cluster_node.hpp
perception/autoware_euclidean_cluster_object_detector/test/: test_euclidean_cluster.cpp  test_euclidean_cluster_object_detector_integration.cpp  test_nodes.cpp  test_ros_conversions.cpp  test_voxel_grid_based_euclidean_cluster.cpp
planning/autoware_route_handler/: CHANGELOG.rst  CMakeLists.txt  package.xml
planning/autoware_route_handler/src/: route_handler.cpp
planning/autoware_route_handler/test/: test_case.hpp  test_getCenterLinePath.cpp  test_getCenterLinePath_vm_10_spec.cpp  test_getCenterLinePath_vm_10_spec_invalid.cpp  test_route_handler.cpp  test_set_map.cpp
planning/autoware_route_handler/test_route/: test_reference_path_01.yaml
planning/motion_velocity_planner/autoware_motion_velocity_obstacle_stop_module/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
sensing/autoware_downsample_filters/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
sensing/autoware_downsample_filters/config/: voxel_grid_downsample_filter_node.param.yaml
sensing/autoware_downsample_filters/launch/: approximate_downsample_filter.launch.xml  approximate_downsample_filter_node.launch.xml  pickup_based_voxel_grid_downsample_filter_node.launch.xml  voxel_grid_downsample_filter_node.launch.xml
sensing/autoware_downsample_filters/src/: approximate_downsample_filter_node.cpp  faster_voxel_grid_downsample_filter.cpp  filter.cpp  memory.cpp  pickup_based_voxel_grid_downsample_filter_node.cpp  random_downsample_filter_node.cpp  robin_hood.h  voxel_grid_downsample_filter_node.cpp
sensing/autoware_downsample_filters/test/: pointcloud_test_utils.hpp  test_faster_voxel_grid_downsample_filter.cpp  test_voxel_grid_downsample_filter.cpp  test_voxel_grid_downsample_filter_integration.cpp
sensing/autoware_vehicle_velocity_converter/: CHANGELOG.rst  CMakeLists.txt  package.xml
sensing/autoware_vehicle_velocity_converter/lib/: vehicle_velocity_converter.cpp
sensing/autoware_vehicle_velocity_converter/src/: vehicle_velocity_converter.cpp  vehicle_velocity_converter.hpp  vehicle_velocity_converter_node.cpp  vehicle_velocity_converter_node.hpp
sensing/autoware_vehicle_velocity_converter/test/: test_vehicle_velocity_converter.cpp  test_vehicle_velocity_converter_node.cpp
(+3871 files in other folders)
