<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_unified_localization</name>
  <version>0.1.0</version>
  <description>Unified localization: ROS-free Core (EKF + stop_filter + twist2accel) and optional Adapter node.</description>
  <maintainer email="mfc@autoware.org">Mete Fatih Cırıt</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>eigen</build_depend>
  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_component_interface_specs</depend>
  <depend>autoware_internal_localization_msgs</depend>
  <depend>autoware_kalman_filter</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>


  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_adapi_v1_msgs</test_depend>
  <test_depend>autoware_lint_common</test_depend>
  <test_depend>autoware_localization_msgs</test_depend>
  <test_depend>diagnostic_msgs</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
